<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_main_dashboard">
    >

    <fragment
        android:id="@+id/nav_main_dashboard"
        android:label="@string/dashboard"
        android:name="com.example.mydmucabapp_passenger.fragment.MainDashBoard"
        tools:layout="@layout/fragment_main_dash_board" />


    <fragment
        android:id="@+id/nav_user_details"
        android:name="com.example.mydmucabapp_passenger.fragment.UserDetailsFragment"
        android:label="@string/details"
        tools:layout="@layout/fragment_user_details" />

    <fragment
        android:id="@+id/nav_scheduled_trips"
        android:name="com.example.mydmucabapp_passenger.fragment.ScheduledTripsFragment"
        android:label="@string/scheduled_trips"
        tools:layout="@layout/fragment_scheduled_trips" />

    <fragment
        android:id="@+id/nav_rides_history"
        android:name="com.example.mydmucabapp_passenger.fragment.RidesHistoryFragment"
        android:label="@string/rides_history"
        tools:layout="@layout/fragment_rides_history" />

    <fragment
        android:id="@+id/nav_faqs"
        android:name="com.example.mydmucabapp_passenger.fragment.FaqsFragment"
        android:label="@string/faqs"
        tools:layout="@layout/fragment_faqs" />
</navigation>