<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/layoutCollapsed"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/container_background4"
        android:layout_marginBottom="10dp"
        >

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/driverProfilePicture"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:scaleType="centerCrop"
            app:strokeWidth="2dp"
            app:srcCompat="@mipmap/ic_launcher_round"
            app:shapeAppearanceOverlay="@style/CircularImageView"
            android:padding="2dp"
            android:layout_margin="5dp"

            >
        </com.google.android.material.imageview.ShapeableImageView>

        <TextView
            android:id="@+id/textViewDriverName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_bold"
            android:padding="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewTripPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="13dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textSize="16sp"

            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layoutExpanded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_bold"
                android:padding="16dp"
                android:text="@string/phone_number"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewDriverPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto"
                android:padding="16dp"
                android:textSize="16sp" />


        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_bold"
                android:padding="16dp"
                android:text="@string/available_seats"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewAvailableSeats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto"
                android:padding="16dp"
                android:textSize="16sp" />


        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_bold"
                android:padding="16dp"
                android:text="@string/start_location"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewDriverStatLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/roboto"
                android:padding="16dp"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_bold"
                android:padding="16dp"
                android:text="Destination: "
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewDriverEndLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto"
                android:padding="16dp"
                android:textSize="16sp" />


        </LinearLayout>


        <Button
            android:id="@+id/requestRide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_bold"
            android:text="Request Ride"/>
        <Button
            android:id="@+id/continueRide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:fontFamily="@font/roboto_bold"
            android:text="Continue Ride"/>

    </LinearLayout>


</LinearLayout>